# pattern-recognition-and-computer-vision

Calibration and Augmented Reality/: CMakeLists.txt  augmentedReality.cpp  calibration.cpp  calibration.h
Content-based Image Retrieval/: CMakeLists.txt  csv_util.cpp  csv_util.h  featureMatching.cpp  featureMatching.h  readfiles.cpp
K-means clustering/: CMakeLists.txt
Real-time 2D Object Recognition/: CMakeLists.txt  csv_util.cpp  csv_util.h  imageProcessing.cpp  imageProcessing.h  objectRecognition.cpp
Recognition using Deep Network/: Extention.py  Extention_2.py  Main.py  Task1.py  Task2.py  Task3.py  Task4.py
Video Special Effects/imgDisplay/: CMakeLists.txt  imgDisplay.cpp
Video Special Effects/timeblur/: CMakeLists.txt  faceDetect.h  filter.cpp  filter.h  timeBlur.cpp
Video Special Effects/vidDisplay/: CMakeLists.txt  faceDetect.cpp  faceDetect.h  filters.cpp  filters.h  vidDisplay.cpp
Virtual Painter/: HandTracker.py  VirtualPainter.py
